crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sql_modal_cursor_at_head.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                                                                                                                  
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │ SELECT 1                                                                                                                         │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │               │
│                │  [INSERT]                                                                                                                 Ready  │               │
│                ╰ ⌥Enter/F5: Run │ ^E: Editor │ ^L: Clear │ ^O: History │ Esc: Normal ─────────────────────────────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
⌥Enter/F5:Run  ^E:Editor  ↑↓←→:Move  Esc:Normal
